# exoclash

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bayer.h  bayer4.c  clash.c  color.h  compile_commands.json  dcmoto.ini  exoclash.c  k7.c  k7.h  loader.bas  prepare.sh  thomson.h  xcode.sh
.cache/clangd/index/: clash.c.34B9013F87FBD26F.idx  exoquant.c.A05ADB81F3E26B1F.idx  exoquant.h.2334288CEF871D02.idx  stb_image.h.44EE0000A9A772FD.idx  stb_image_resize2.h.99CC1F3F5327C252.idx  stb_image_write.h.9DA0FF4B6394696D.idx
exoquant/: exoquant.c
